# projects

./: README.md
currency_exchange/: New_readme.md  app.py  db_init.sql  exchange.db  init_db.py
currency_exchange/controllers/: currency_controller.py  exchange_rate_controller.py
currency_exchange/models/: currency_model.py  database.py  exchange_rate_model.py
currency_exchange/utils/: exchange_logic.py
currency_exchange/views/: json_view.py
quotes_project/: db.sqlite3  manage.py  requirements.txt
quotes_project/quotes/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  views.py
quotes_project/quotes/migrations/: 0001_initial.py
quotes_project/quotes/static/: basic.js
quotes_project/quotes/templates/quotes/: add_quote.html  base.html  dashboard.html  random_quote.html  top_quotes.html
quotes_project/quotes_project/: asgi.py  settings.py  urls.py  wsgi.py
weather_project/: pyproject.toml  structure.txt
weather_project/comfig/: settings.py  urls.py
weather_project/templates/: base.html
weather_project/templates/registration/: login.html  signup.html
weather_project/templates/weatherapp/: index.html  search_results.html
weather_project/weatherapp/: forms.py  models.py  urls.py  views.py
weather_project/weatherapp/services/: openweather.py
