[tool.poetry]
name = "weather_project"
version = "0.1.0"
description = "Weather forecast app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "weatherapp"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.3"
psycopg2-binary = "^2.9"
requests = "^2.31"
python-dotenv = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-django = "^4.5"
responses = "^0.28"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
